--- a/Dockerfile.mingw_xp_openssl
+++ b/Dockerfile.mingw_xp_openssl
@@ -26,8 +26,8 @@ ENV https_proxy http://192.168.0.101:1081/
 
 # It would be better to use nearest ubuntu archive mirror for faster
 # downloads.
-RUN sed -ie 's/archive\.ubuntu\.com/old-releases.ubuntu.com/g' /etc/apt/sources.list
-RUN sed -ie 's/security\.ubuntu\.com/old-releases.ubuntu.com/g' /etc/apt/sources.list
+RUN sed -ie 's/archive\.ubuntu\.com/mirrors.ustc.edu.cn/g' /etc/apt/sources.list
+RUN sed -ie 's/security\.ubuntu\.com/mirrors.ustc.edu.cn/g' /etc/apt/sources.list
 
 RUN apt-get update && \
     DEBIAN_FRONTEND="noninteractive" \
