--- a/Dockerfile.mingw
+++ b/Dockerfile.mingw
@@ -11,18 +11,12 @@
 # $ sudo docker cp $id:/aria2-2048-threads/src/aria2c.exe <dest>
 # $ sudo docker rm -v $id
 
-FROM ubuntu:20.04
+FROM ubuntu:22.04
 
 MAINTAINER Tatsuhiro Tsujikawa
 
 # Change HOST to x86_64-w64-mingw32 to build 64-bit binary
 ENV HOST i686-w64-mingw32
-
-# Local Proxy
-ENV HTTP_PROXY http://192.168.0.101:1081/
-ENV HTTPS_PROXY http://192.168.0.101:1081/
-ENV http_proxy http://192.168.0.101:1081/ 
-ENV https_proxy http://192.168.0.101:1081/
 
 # It would be better to use nearest ubuntu archive mirror for faster
 # downloads.
@@ -36,14 +30,19 @@ RUN apt-get update && \
         patch ca-certificates \
         pkg-config git curl dpkg-dev gcc-mingw-w64 g++-mingw-w64 \
         autopoint libcppunit-dev libxml2-dev libgcrypt20-dev lzip
+ 
+# Local Proxy
+ENV HTTP_PROXY http://192.168.0.101:1081/
+ENV HTTPS_PROXY http://192.168.0.101:1081/
+ENV http_proxy http://192.168.0.101:1081/ 
+ENV https_proxy http://192.168.0.101:1081/
 
 RUN curl -L -O https://gmplib.org/download/gmp/gmp-6.2.1.tar.lz && \
-    curl -L -O https://github.com/libexpat/libexpat/releases/download/R_2_4_1/expat-2.4.1.tar.bz2 && \
-    curl -L -O https://www.sqlite.org/2021/sqlite-autoconf-3360000.tar.gz && \
-    curl -L -O http://zlib.net/zlib-1.2.11.tar.gz && \
-    curl -L -O https://c-ares.haxx.se/download/c-ares-1.17.2.tar.gz && \
-    curl -L -O https://www.libssh2.org/download/libssh2-1.9.0.tar.gz && \
-    curl -L -O https://github.com/libssh2/libssh2/commit/ba149e804ef653cc05ed9803dfc94519ce9328f7.patch
+    curl -L -O https://github.com/libexpat/libexpat/releases/download/R_2_4_8/expat-2.4.8.tar.bz2 && \
+    curl -L -O https://www.sqlite.org/2022/sqlite-autoconf-3380500.tar.gz && \
+    curl -L -O http://zlib.net/zlib-1.2.12.tar.gz && \
+    curl -L -O https://c-ares.haxx.se/download/c-ares-1.18.1.tar.gz && \
+    curl -L -O https://www.libssh2.org/download/libssh2-1.10.0.tar.gz
 
 RUN tar xf gmp-6.2.1.tar.lz && \
     cd gmp-6.2.1 && \
@@ -57,8 +56,8 @@ RUN tar xf gmp-6.2.1.tar.lz && \
         CFLAGS="-mtune=generic -O2 -g0" && \
     make install
 
-RUN tar xf expat-2.4.1.tar.bz2 && \
-    cd expat-2.4.1 && \
+RUN tar xf expat-2.4.8.tar.bz2 && \
+    cd expat-2.4.8 && \
     ./configure \
         --disable-shared \
         --enable-static \
@@ -67,8 +66,8 @@ RUN tar xf expat-2.4.1.tar.bz2 && \
         --build=`dpkg-architecture -qDEB_BUILD_GNU_TYPE` && \
     make install
 
-RUN tar xf sqlite-autoconf-3360000.tar.gz && \
-    cd sqlite-autoconf-3360000 && \
+RUN tar xf sqlite-autoconf-3380500.tar.gz && \
+    cd sqlite-autoconf-3380500 && \
     ./configure \
         --disable-shared \
         --enable-static \
@@ -77,8 +76,8 @@ RUN tar xf sqlite-autoconf-3360000.tar.gz && \
         --build=`dpkg-architecture -qDEB_BUILD_GNU_TYPE` && \
     make install
 
-RUN tar xf zlib-1.2.11.tar.gz && \
-    cd zlib-1.2.11 && \
+RUN tar xf zlib-1.2.12.tar.gz && \
+    cd zlib-1.2.12 && \
     CC=$HOST-gcc \
     AR=$HOST-ar \
     LD=$HOST-ld \
@@ -91,8 +90,8 @@ RUN tar xf zlib-1.2.11.tar.gz && \
         --static && \
     make install
 
-RUN tar xf c-ares-1.17.2.tar.gz && \
-    cd c-ares-1.17.2 && \
+RUN tar xf c-ares-1.18.1.tar.gz && \
+    cd c-ares-1.18.1 && \
     ./configure \
         --disable-shared \
         --enable-static \
@@ -103,9 +102,8 @@ RUN tar xf c-ares-1.17.2.tar.gz && \
         LIBS="-lws2_32" && \
     make install
 
-RUN tar xf libssh2-1.9.0.tar.gz && \
-    cd libssh2-1.9.0 && \
-    patch -p1 < ../ba149e804ef653cc05ed9803dfc94519ce9328f7.patch && \
+RUN tar xf libssh2-1.10.0.tar.gz && \
+    cd libssh2-1.10.0 && \
     ./configure \
         --disable-shared \
         --enable-static \
