fix indentation issues and add experimental parallel makeflags

--- a/Dockerfile.mingw_xp_mbedtls
+++ b/Dockerfile.mingw_xp_mbedtls
@@ -43,7 +43,9 @@ RUN curl -L -O https://gmplib.org/download/gmp/gmp-6.2.1.tar.lz && \
     curl -L -O http://zlib.net/zlib-1.2.12.tar.gz && \
     curl -L -O https://c-ares.haxx.se/download/c-ares-1.18.1.tar.gz && \
     curl -L -O https://www.libssh2.org/download/libssh2-1.10.0.tar.gz && \
-	curl -L -O https://github.com/ARMmbed/mbedtls/archive/v3.1.0.tar.gz
+    curl -L -O https://github.com/Mbed-TLS/mbedtls/archive/v3.1.0.tar.gz
+
+ENV MAKEFLAGS -j4
 
 RUN tar xf gmp-6.2.1.tar.lz && \
     cd gmp-6.2.1 && \
@@ -103,8 +105,8 @@ RUN tar xf c-ares-1.18.1.tar.gz && \
         LIBS="-lws2_32" && \
     make install
 
-RUN tar xf mbedtls-3.1.0.tar.gz && \
-    cd mbedtls-3.1.0 && \
+RUN tar xf v3.1.0.tar.gz && \
+    cd v3.1.0 && \
     CC=$HOST-gcc \
     AR=$HOST-ar \
     LD=$HOST-ld \
