--- a/Dockerfile.mingw
+++ b/Dockerfile.mingw
@@ -44,6 +44,8 @@ RUN curl -L -O https://gmplib.org/download/gmp/gmp-6.2.1.tar.lz && \
     curl -L -O https://c-ares.haxx.se/download/c-ares-1.18.1.tar.gz && \
     curl -L -O https://www.libssh2.org/download/libssh2-1.10.0.tar.gz
 
+ENV MAKEFLAGS -j4
+
 RUN tar xf gmp-6.2.1.tar.lz && \
     cd gmp-6.2.1 && \
     ./configure \
