--- a/Dockerfile.mingw_xp_mbedtls
+++ b/Dockerfile.mingw_xp_mbedtls
@@ -29,7 +29,7 @@ RUN apt-get update && \
         make binutils autoconf automake autotools-dev libtool \
         patch ca-certificates \
         pkg-config git curl dpkg-dev gcc-mingw-w64 g++-mingw-w64 \
-        autopoint libcppunit-dev libxml2-dev libgcrypt20-dev lzip
+        autopoint libcppunit-dev libxml2-dev libgcrypt20-dev lzip python3
  
 # Local Proxy
 ENV HTTP_PROXY http://192.168.0.101:1081/
@@ -43,7 +43,7 @@ RUN curl -L -O https://gmplib.org/download/gmp/gmp-6.2.1.tar.lz && \
     curl -L -O http://zlib.net/zlib-1.2.12.tar.gz && \
     curl -L -O https://c-ares.haxx.se/download/c-ares-1.18.1.tar.gz && \
     curl -L -O https://www.libssh2.org/download/libssh2-1.10.0.tar.gz && \
-    curl -L -O https://github.com/Mbed-TLS/mbedtls/archive/v3.1.0.tar.gz
+    curl -L -O https://github.com/Mbed-TLS/mbedtls/archive/v2.28.0.tar.gz
 
 ENV MAKEFLAGS -j4
 
@@ -105,8 +105,8 @@ RUN tar xf c-ares-1.18.1.tar.gz && \
         LIBS="-lws2_32" && \
     make install
 
-RUN tar xf v3.1.0.tar.gz && \
-    cd v3.1.0 && \
+RUN tar xf v2.28.0.tar.gz && \
+    cd mbedtls-2.28.0 && \
     CC=$HOST-gcc \
     AR=$HOST-ar \
     LD=$HOST-ld \
@@ -119,7 +119,6 @@ RUN tar xf v3.1.0.tar.gz && \
 
 RUN tar xf libssh2-1.10.0.tar.gz && \
     cd libssh2-1.10.0 && \
-    patch -p1 < ../ba149e804ef653cc05ed9803dfc94519ce9328f7.patch && \
     ./configure \
         --disable-shared \
         --enable-static \
