--- a/Dockerfile.mingw_xp_openssl
+++ b/Dockerfile.mingw_xp_openssl
@@ -16,7 +16,7 @@ FROM ubuntu:22.04
 MAINTAINER Tatsuhiro Tsujikawa
 
 # Change HOST to x86_64-w64-mingw32 to build 64-bit binary
-ENV HOST i686-w64-mingw32
+ENV HOST x86_64-w64-mingw32
 
 # It would be better to use nearest ubuntu archive mirror for faster
 # downloads.
@@ -37,27 +37,14 @@ ENV HTTPS_PROXY http://192.168.0.101:1081/
 ENV http_proxy http://192.168.0.101:1081/ 
 ENV https_proxy http://192.168.0.101:1081/
 
-RUN curl -L -O https://gmplib.org/download/gmp/gmp-6.2.1.tar.lz && \
-    curl -L -O https://github.com/libexpat/libexpat/releases/download/R_2_4_8/expat-2.4.8.tar.bz2 && \
+RUN curl -L -O https://github.com/libexpat/libexpat/releases/download/R_2_4_8/expat-2.4.8.tar.bz2 && \
     curl -L -O https://www.sqlite.org/2022/sqlite-autoconf-3380500.tar.gz && \
     curl -L -O http://zlib.net/zlib-1.2.12.tar.gz && \
-    curl -L -O https://c-ares.haxx.se/download/c-ares-1.18.1.tar.gz && \
+    curl -L -O https://c-ares.haxx.se/download/c-ares-1.17.2.tar.gz && \
     curl -L -O https://www.libssh2.org/download/libssh2-1.10.0.tar.gz && \
     curl -L -O https://www.openssl.org/source/openssl-1.1.1p.tar.gz
 
 ENV MAKEFLAGS -j4
-
-RUN tar xf gmp-6.2.1.tar.lz && \
-    cd gmp-6.2.1 && \
-    ./configure \
-        --disable-shared \
-        --enable-static \
-        --prefix=/usr/local/$HOST \
-        --host=$HOST \
-        --disable-cxx \
-        --enable-fat \
-        CFLAGS="-mtune=generic -O2 -g0" && \
-    make install
 
 RUN tar xf expat-2.4.8.tar.bz2 && \
     cd expat-2.4.8 && \
@@ -93,8 +80,8 @@ RUN tar xf zlib-1.2.12.tar.gz && \
         --static && \
     make install
 
-RUN tar xf c-ares-1.18.1.tar.gz && \
-    cd c-ares-1.18.1 && \
+RUN tar xf c-ares-1.17.2.tar.gz && \
+    cd c-ares-1.17.2 && \
     ./configure \
         --disable-shared \
         --enable-static \
@@ -126,6 +113,7 @@ RUN tar xf openssl-1.1.1p.tar.gz && \
         no-shared \
         enable-capieng \
         --prefix=/usr/local/$HOST && \
+    make && \
     make install
 
 RUN tar xf libssh2-1.10.0.tar.gz && \
@@ -142,5 +130,5 @@ RUN tar xf libssh2-1.10.0.tar.gz && \
     make install
 ADD https://api.github.com/repos/chitao1234/aria2-2048-threads/git/refs/heads/master version.json
 RUN git clone https://github.com/chitao1234/aria2-2048-threads && \
-    cd aria2-2048-threads && autoreconf -i && ./mingw-config && make && \
+    cd aria2-2048-threads && autoreconf -i && ./mingw-config-xp-openssl && make && \
     $HOST-strip src/aria2c.exe
