--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -23,7 +23,6 @@ on:
 jobs:
   create-prerelease:
     name: Create Prerelease
-    if: github.event_name == 'push' || github.event_name == 'schedule'
     runs-on: ubuntu-latest
     steps:
       - name: Set current date as env variable
@@ -31,7 +30,7 @@ jobs:
       - uses: dev-drprasad/delete-tag-and-release@v0.1.2
         with:
           delete_release: true
-          tag_name: continuous
+          tag_name: 1.36.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Create Prerelease Tag
@@ -40,8 +39,8 @@ jobs:
         with:
           prerelease: true
           draft: false
-          tag_name: continuous
-          name: Continuous build
+          tag_name: 1.36.0
+          name: 1.36.0 build
           body: |
             Building time: ${{ env.NOW }}
             - - -
