--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -52,12 +52,12 @@ jobs:
       fail-fast: false
       matrix:
         cross_host:
-#           - arm-linux-musleabi
-#           - aarch64-linux-musl
-#           - mips-linux-musl
-#           - mipsel-linux-musl
-#           - mips64-linux-musl
-          - x86_64-linux-musl
+           - arm-linux-musleabi
+           - aarch64-linux-musl
+           - mips-linux-musl
+           - mipsel-linux-musl
+           - mips64-linux-musl
+           - x86_64-linux-musl
 #           - x86_64-w64-mingw32
 #           - i686-w64-mingw32
         use_libressl: [0, 1]
