--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -58,8 +58,8 @@ jobs:
            - mipsel-linux-musl
            - mips64-linux-musl
            - x86_64-linux-musl
-#           - x86_64-w64-mingw32
-#           - i686-w64-mingw32
+           - x86_64-w64-mingw32
+           - i686-w64-mingw32
         use_libressl: [0, 1]
         exclude:
           - cross_host: x86_64-w64-mingw32
