--- a/Dockerfile.mingw
+++ b/Dockerfile.mingw
@@ -26,15 +26,15 @@ RUN sed -ie 's/security\.ubuntu\.com/mirrors.ustc.edu.cn/g' /etc/apt/sources.lis
 RUN apt-get update && \
     DEBIAN_FRONTEND="noninteractive" \
     apt-get install -y --no-install-recommends \
-        make binutils autoconf automake autotools-dev libtool \
-        patch ca-certificates \
-        pkg-config git curl dpkg-dev gcc-mingw-w64 g++-mingw-w64 \
-        autopoint libcppunit-dev libxml2-dev libgcrypt20-dev lzip
- 
+    make binutils autoconf automake autotools-dev libtool \
+    patch ca-certificates \
+    pkg-config git curl dpkg-dev gcc-mingw-w64 g++-mingw-w64 \
+    autopoint libcppunit-dev libxml2-dev libgcrypt20-dev lzip
+
 # Local Proxy
 ENV HTTP_PROXY http://192.168.0.101:1081/
 ENV HTTPS_PROXY http://192.168.0.101:1081/
-ENV http_proxy http://192.168.0.101:1081/ 
+ENV http_proxy http://192.168.0.101:1081/
 ENV https_proxy http://192.168.0.101:1081/
 
 RUN curl -L -O https://gmplib.org/download/gmp/gmp-6.2.1.tar.lz && \
@@ -49,33 +49,33 @@ ENV MAKEFLAGS -j4
 RUN tar xf gmp-6.2.1.tar.lz && \
     cd gmp-6.2.1 && \
     ./configure \
-        --disable-shared \
-        --enable-static \
-        --prefix=/usr/local/$HOST \
-        --host=$HOST \
-        --disable-cxx \
-        --enable-fat \
-        CFLAGS="-mtune=generic -O2 -g0" && \
+    --disable-shared \
+    --enable-static \
+    --prefix=/usr/local/$HOST \
+    --host=$HOST \
+    --disable-cxx \
+    --enable-fat \
+    CFLAGS="-mtune=generic -O2 -g0" && \
     make install
 
 RUN tar xf expat-2.4.8.tar.bz2 && \
     cd expat-2.4.8 && \
     ./configure \
-        --disable-shared \
-        --enable-static \
-        --prefix=/usr/local/$HOST \
-        --host=$HOST \
-        --build=`dpkg-architecture -qDEB_BUILD_GNU_TYPE` && \
+    --disable-shared \
+    --enable-static \
+    --prefix=/usr/local/$HOST \
+    --host=$HOST \
+    --build=`dpkg-architecture -qDEB_BUILD_GNU_TYPE` && \
     make install
 
 RUN tar xf sqlite-autoconf-3380500.tar.gz && \
     cd sqlite-autoconf-3380500 && \
     ./configure \
-        --disable-shared \
-        --enable-static \
-        --prefix=/usr/local/$HOST \
-        --host=$HOST \
-        --build=`dpkg-architecture -qDEB_BUILD_GNU_TYPE` && \
+    --disable-shared \
+    --enable-static \
+    --prefix=/usr/local/$HOST \
+    --host=$HOST \
+    --build=`dpkg-architecture -qDEB_BUILD_GNU_TYPE` && \
     make install
 
 RUN tar xf zlib-1.2.12.tar.gz && \
@@ -86,37 +86,37 @@ RUN tar xf zlib-1.2.12.tar.gz && \
     RANLIB=$HOST-ranlib \
     STRIP=$HOST-strip \
     ./configure \
-        --prefix=/usr/local/$HOST \
-        --libdir=/usr/local/$HOST/lib \
-        --includedir=/usr/local/$HOST/include \
-        --static && \
+    --prefix=/usr/local/$HOST \
+    --libdir=/usr/local/$HOST/lib \
+    --includedir=/usr/local/$HOST/include \
+    --static && \
     make install
 
 RUN tar xf c-ares-1.18.1.tar.gz && \
     cd c-ares-1.18.1 && \
     ./configure \
-        --disable-shared \
-        --enable-static \
-        --without-random \
-        --prefix=/usr/local/$HOST \
-        --host=$HOST \
-        --build=`dpkg-architecture -qDEB_BUILD_GNU_TYPE` \
-        LIBS="-lws2_32 -liphlpapi" && \
+    --disable-shared \
+    --enable-static \
+    --without-random \
+    --prefix=/usr/local/$HOST \
+    --host=$HOST \
+    --build=`dpkg-architecture -qDEB_BUILD_GNU_TYPE` \
+    LIBS="-lws2_32 -liphlpapi" && \
     make install
 
 RUN tar xf libssh2-1.10.0.tar.gz && \
     cd libssh2-1.10.0 && \
     ./configure \
-        --disable-shared \
-        --enable-static \
-        --prefix=/usr/local/$HOST \
-        --host=$HOST \
-        --build=`dpkg-architecture -qDEB_BUILD_GNU_TYPE` \
-        --without-openssl \
-        --with-wincng \
-        LIBS="-lws2_32" && \
+    --disable-shared \
+    --enable-static \
+    --prefix=/usr/local/$HOST \
+    --host=$HOST \
+    --build=`dpkg-architecture -qDEB_BUILD_GNU_TYPE` \
+    --without-openssl \
+    --with-wincng \
+    LIBS="-lws2_32" && \
     make install
-ADD https://api.github.com/repos/chitao1234/aria2-2048-threads/git/refs/heads/master version.json
-RUN git clone https://github.com/chitao1234/aria2-2048-threads && \
+ADD https://api.github.com/repos/Starmania/aria2/git/refs/heads/master version.json
+RUN git clone https://github.com/Starmania/aria2 && \
     cd aria2-2048-threads && autoreconf -i && ./mingw-config && make && \
     $HOST-strip src/aria2c.exe
